Mon Feb 17 15:43:59 2014  Zachary Scott  <e@zzak.io>

	* doc/keywords.rdoc: [DOC] Add keywords doc by documenting-ruby/ruby#29
	  https://github.com/documenting-ruby/ruby/pull/29

Mon Feb 17 12:31:31 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_double): fix a warning message.

Mon Feb 17 12:09:52 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce new environment variable
	  "RUBY_GC_HEAP_OLDOBJECT_LIMIT_FACTOR" to control major/minor GC
	  frequency.

	  Do full GC when the number of old objects is more than R * N
	  where R is this factor and
                N is the number of old objects just after last full GC.

	* test/ruby/test_gc.rb: add a test.

Mon Feb 17 11:28:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_pty.rb: ignore warnings to unused variables.

Mon Feb 17 11:27:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_find.rb: remove unused variables.

Sun Feb 17 02:12:00 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_initialize): Insert GC guard.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_global_new): ditto.

Sun Feb 16 15:53:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_securerandom.rb: File.exists? is deprecated. use File.exist?

Sun Feb 16 15:05:00 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/pathname/test_pathname.rb: File.exists? is deprecated. use File.exist?

Sun Feb 16 15:00:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/ftp/test_ftp.rb: remove unused variables.
	* test/logger/test_logger.rb: ditto.

Sun Feb 16 14:52:46 2014  Eric Wong  <e@80x24.org>

	* dir.c (dir_s_glob): RB_GC_GUARD instead of volatile

Sun Feb 16 14:33:52 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (RBIGNUM_SIGN): Defined for compatibility.
	  (RBIGNUM_POSITIVE_P): Ditto.
	  (RBIGNUM_NEGATIVE_P): Ditto.

Sun Feb 16 12:46:47 2014  Eric Wong  <e@80x24.org>

	* io.c (rb_f_backquote): trade volatile for manual recycle